feat(proto): add protobuf definitions and generated code
- Define Job, LeaseRequest, JobAck messages
- Define WorkerService with LeaseJobs (streaming), AckJob, NackJob RPCs
- Generate Go code for protobuf (simplified for MVP)
- Worker protocol supports lease TTL, retry, and error handling

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,5 @@ Thumbs.db
 # Dependencies
 vendor/
 
-# Generated
-*.pb.go
+# Generated (uncomment for production with proper protoc setup)
+# *.pb.go
